Fixed row alignment

--- a/assets/sass/components/_profile-container.scss
+++ b/assets/sass/components/_profile-container.scss
@@ -20,6 +20,7 @@
     &__profile {
         padding: 2rem;
         margin: 0 2rem;
+        height: 30rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
